--- a/Views/Railway/Booking.cshtml
+++ b/Views/Railway/Booking.cshtml
@@ -82,10 +82,11 @@
                                 </form>
                             </td>
                             <td class="small text-center">
-                                @item.Title <br />
+                                @item.ScheduleName <br />
+                                @item.Trip <br />
                                 @item.StartAt<br />
-                                Toa @item.CoachId chỗ @item.Seat<br />
-                                Ngồi mềm điều hòa<br />
+                                Coach: @item.CoachNo, Cabin @item.Cabin, Seat @item.Seat<br />
+                                Class: @item.CoachClass<br />
                             </td>
                             <td class="text-center">
                                 900
