--- a/Views/Railway/Booking.cshtml
+++ b/Views/Railway/Booking.cshtml
@@ -82,7 +82,7 @@
                                 </form>
                             </td>
                             <td class="small text-center">
-                                @item.Title <br />
+                                @item.Trip <br />
                                 @item.StartAt<br />
                                 Toa @item.CoachId chỗ @item.Seat<br />
                                 Ngồi mềm điều hòa<br />
