--- a/Views/Booking/Index.cshtml
+++ b/Views/Booking/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Railway_Group01.Models.ViewModels.BookingIndexViewModel;
+
 @{
     ViewData["Title"] = "BOOKING";
     Layout = "~/Views/Shared/_LayoutofTuong.cshtml";
@@ -36,7 +37,7 @@
         <table class="table table-bordered">
             <thead>
                 <tr class="table-primary">
-                    <th class="text-center">Full name</th>
+                    <th class="text-center">Passenger</th>
                     <th class="text-center">Seat</th>
                     <th class="text-center">Price</th>
                     <th class="text-center">Passenger type discount</th>
@@ -45,118 +46,121 @@
                 </tr>
             </thead>
             <tbody>
-                @if (Model.Cart != null && Model.Cart.Count > 0)
-                {
-                    decimal total = 0;
-                    @foreach (var item in Model.Cart)
+                <form method="post" id="formPassengerScheme" asp-action="FillInformation">
+                    @if (Model.Cart != null && Model.Cart.Count > 0)
                     {
-                        total += item.Price + 0.1M;
+                        decimal total = 0;
+                        @for (var i = 0; i < Model.Cart.Count; i++)
+                        {
+                            total += Model.Cart[i].Price + 0.1M;
                         <tr>
-                            <td class="bg-body-secondary px-2">
+                            <td class="bg-body-secondary px-3">
 
                                 <div class="row g-3 align-items-center">
                                     <div class="col-4 border-bottom">
-                                        <label for="Name" class="col-form-label">Full name</label>
+                                        <label for="Passengers[@i].Name" class="col-form-label">Full name</label><i class="text-danger">*</i>
                                     </div>
                                     <div class="col-8">
-                                        <input type="text" id="Name" class="form-control form-control-sm">
+                                        <input type="text" id="Passengers[@i].Name" name="Passengers[@i].Name" class="form-control form-control-sm" required>
                                     </div>
                                 </div>
                                 <div class="row g-3 align-items-center">
                                     <div class="col-4 border-bottom">
-                                        <label for="Type" class="col-form-label">Type</label>
+                                        <label for="Passengers[@i].PassengerType" class="col-form-label">Type</label><i class="text-danger">*</i>
                                     </div>
                                     <div class="col-8">
-                                        <select id="Type" name="Type" class="form-select form-select-sm" asp-items="Model.PassengerTypes" ></select>
+                                        <select onchange="updatePrice(@i, @Model.Cart[i].Price)" id="Passengers[@i].TypeCode" name="Passengers[@i].TypeCode" class="form-select form-select-sm" asp-items="Model.PassengerTypes" required></select>
                                     </div>
                                 </div>
                                 <div class="row g-3 align-items-center">
                                     <div class="col-4 border-bottom">
-                                        <label for="CID" class="col-form-label">Citizen no</label>
+                                        <label for="Passengers[@i].ID" class="col-form-label" id="inputLabelToBeChange">Citizen ID</label><i class="text-danger">*</i>
                                     </div>
                                     <div class="col-8">
-                                        <input type="text" id="CID" class="form-control form-control-sm">
+                                        <input type="text" id="Passengers[@i].ID" name="Passengers[@i].ID" class="form-control form-control-sm" required>
+                                        <input type="hidden" id="Passengers[@i].Birthday" name="Passengers[@i].ID" class="form-control form-control-sm" required>
                                     </div>
                                 </div>
 
                             </td>
                             <td class="small text-center">
-                                @item.ScheduleName <br />
-                                @item.Trip <br />
-                                @item.StartAt<br />
-                                Coach: @item.CoachNo, Cabin @item.Cabin, Seat @item.Seat<br />
-                                Class: @item.CoachClassName<br />
+                                    @Model.Cart[i].ScheduleName <br />
+                                    @Model.Cart[i].Trip <br />
+                                    @Model.Cart[i].StartAt<br />
+                                Coach: @Model.Cart[i].CoachNo, Cabin @Model.Cart[i].Cabin, Seat @Model.Cart[i].Seat<br />
+                                Class: @Model.Cart[i].CoachClassName<br />
                             </td>
                             <td class="text-center">
-                                @item.Price
+                                    @Model.Cart[i].Price
                             </td>
-                            <td class="text-center">0</td>
-                            <td class="text-center">1</td>
-                            <td class="text-center">@(item.Price + 0.1M)</td>
+                            <td class="text-center" id="Passenger[@i].Discount">0</td>
+                            <td class="text-center" id="Cart[@i].Insurance">0.1</td>
+                            <td class="text-center subtotal" id="Cart[@i].SubTotal">@(Model.Cart[i].Price + 0.1M)</td>
                         </tr>
-                    }
+                        }
                     <tr class="table-info">
                         <td colspan="5"><p class="text-end fw-bold">Total</p></td>
-                        <td class="text-center">@(total)</td>
+                        <td class="text-center" id="CartTotal">@(total)</td>
                     </tr>
-                }
-                else
-                {
+                    }
+                    else
+                    {
                     <tr><td colspan="6">No item in cart.</td></tr>
-                }
+                    }
+                </form>
             </tbody>
         </table>
     </section>
 
     <section class="mb-3">
         <h6 class="text-orange">TICKET BOOKER</h6>
-        <div class="d-flex">
-            <div class="w-50">
-                <div class="d-flex align-items-center">
-                    <div class="w-25 ps-3">
-                        <label for="Name" class="col-form-label">Full name<span class="text-danger">*</span></label>
+        <form id="formUpdateUser">
+            <div class="d-flex mb-2">
+                <div class="w-50">
+                    <div class="d-flex align-items-center">
+                        <div class="w-25 ps-3">
+                            <label for="Name" class="col-form-label">User Name</label>
+                        </div>
+                        <div class="w-50">
+                            <input id="Name" name="UserName" asp-for="@Model.User!.UserName" class="form-control form-control-sm" disabled>
+                        </div>
                     </div>
-                    <div class="w-50">
-                        <input type="text" id="Name" class="form-control form-control-sm">
+                </div>
+                <div class="w-50">
+                    <div class="d-flex align-items-center">
+                        <div class="w-25 ps-3">
+                            <label for="Phone" class="col-form-label">Phone</label>
+                        </div>
+                        <div class="w-50">
+                            <input type="tel" name="PhoneNumber" id="PhoneNumber" asp-for="@Model.User!.PhoneNumber" class="form-control form-control-sm">
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <div class="w-50">
-                <div class="d-flex align-items-center">
-                    <div class="w-25 ps-3">
-                        <label for="Name" class="col-form-label">Citizen no<span class="text-danger">*</span></label>
-                    </div>
-                    <div class="w-50">
-                        <input type="text" id="Name" class="form-control form-control-sm">
+            <div class="d-flex">
+                <div class="w-50">
+                    <div class="d-flex align-items-center">
+                        <div class="w-25 ps-3">
+                            <label for="Email" class="col-form-label">Email</label>
+                        </div>
+                        <div class="w-50">
+                            <input type="email" name="Email" id="Email" asp-for="@Model.User!.Email" class="form-control form-control-sm">
+                        </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="d-flex">
-            <div class="w-50">
-                <div class="d-flex align-items-center">
+                <div class="w-50 d-flex">
                     <div class="w-25 ps-3">
-                        <label for="Email" class="col-form-label">Email<span class="text-danger">*</span></label>
+                        <span id="updateSuccessMessage" class="text-success ms-2"></span>
                     </div>
                     <div class="w-50">
-                        <input type="text" id="Email" class="form-control form-control-sm">
+                        <button id="btnUpdateUser" class="btn btn-orange">Update</button>
                     </div>
                 </div>
             </div>
-
-            <div class="w-50">
-                <div class="d-flex align-items-center">
-                    <div class="w-25 ps-3">
-                        <label for="Phone" class="col-form-label">Phone<span class="text-danger">*</span></label>
-                    </div>
-                    <div class="w-50">
-                        <input type="text" id="Phone" class="form-control form-control-sm">
-                    </div>
-                </div>
-            </div>
-        </div>
+            
+        </form>
     </section>
 
     <section class="mb-3">
@@ -179,7 +183,8 @@
 
     <section>
         <div class="d-flex justify-content-between">
-            <a asp-controller="Railway" asp-action="Index" class="btn btn-orange fw-bold">👈 Back</a>
+            <a href="@ViewBag.returnUrl" class="btn btn-orange fw-bold">👈 Back</a>
+      
             @if (Model.Cart != null && Model.Cart.Count > 0)
             {
                 <button id="btnSubmitBookingInfo" class="btn btn-orange fw-bold"> Submit 👉</button>
@@ -188,21 +193,68 @@
     </section>
 </div>
 
-<script type="text/javascript">
-    $("#btnSubmitBookingInfo").click(function () {
+@section Scripts
+{
+    <script type="text/javascript">
+        function updatePrice(id, price) {
+            var selectValue = document.getElementById("Passengers[" + id + "].TypeCode").value;
+            var discountElement = document.getElementById("Passenger[" + id + "].Discount");
+            var subTotalElement = document.getElementById("Cart[" + id + "].SubTotal");
+            var totalElement = document.getElementById("CartTotal");
+            var subTotals = document.getElementsByClassName("subtotal");
+            var subTotal = document.getElementById("Cart[" + id + "].SubTotal");
+            var insurance = document.getElementById("Cart[" + id + "].Insurance");
+            var inputId = document.getElementById("Passengers[" + id + "].ID");
+            var inputBirthday = document.getElementById("Passengers[" + id + "].Birthday");
+            var label = document.getElementById("inputLabelToBeChange");
 
-        let
+            if (selectValue == "CH") {
+                inputBirthday.type = "date";
+                inputId.type = "hidden";
+                label.innerText = "Birthday";
+            } else {
+                inputBirthday.type = "hidden";
+                inputId.type = "text";
+                label.innerText = "Citizen ID";
+            }
 
             $.ajax({
-                url: 'Booking/Book',
+                url: 'Booking/UpdateDiscountPrice',
                 type: 'POST',
-                dataType: 'json',
-                data: $("#formAnswerScheme").serialize(),
+                data: { code: selectValue },
                 success: function (data) {
-                    console.log(data);
-                    $("#divAnswerSchemeContainer").html(data);
+                    discountElement.textContent = parseFloat(price * data.response / 100).toFixed(2);
+                    subTotal.textContent = parseFloat(price * data.response / 100).toFixed(2);
+                    var total = 0;
+                    for (let i = 0; i < subTotals.length; i++) {
+                        total += +subTotals[i].textContent
+                    }
+                    totalElement.textContent = total;
                 },
-                error: function (xhr, textStatus, exceptionThrown) { alert(JSON.parse(xhr.responseText)); }
-            });
-    });
-</script>
+                error: function (e) {
+                    console.error(e);
+                }
+            })
+        }
+
+        $("#btnUpdateUser").click(function(e) {
+            e.preventDefault();
+            var message = document.getElementById("updateSuccessMessage");
+            $.ajax({
+                type: 'POST',
+                url: 'Booking/UpdateUser',
+                dataType: 'json',
+                data: $("#formUpdateUser").serialize(),
+                success: function (data) {
+                    if (data.success) {
+                        message.innerText = "Updated"
+                    } 
+                }
+            })
+        })
+
+        $("#btnSubmitBookingInfo").click(function () {
+            $("#formPassengerScheme").trigger("submit");
+        });
+    </script>
+}
