--- a/Views/ScheduleMaster/TrainSchedule.cshtml
+++ b/Views/ScheduleMaster/TrainSchedule.cshtml
@@ -1,8 +1,7 @@
 ﻿@model IEnumerable<Railway_Group01.Data.Schedule>
 @using System.Globalization;
 @{
-	Layout = null;
-
+    Layout = null;
 }
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -61,18 +60,13 @@
             <!-- row -->
             <div class="row">
                 <div class="col-6">
-                    <form asp-controller="ScheduleMaster" asp-action="SearchByMonth" method="post" id="monthForm">
+                    <form asp-controller="ScheduleMaster" asp-action="SearchByDatetime" method="post" >
                         <div>
-                            <label for="monthSelect">Select Month:</label>
+                            <label for="monthSelect">Select </label>
                         </div>
                         <div>
-                            <select id="monthSelect" name="month" onchange="submitMonthForm()">
-                                <option>select month</option>
-                                @for (int i = 1; i <= 12; i++)
-                                {
-                                    <option value="@i">@CultureInfo.CurrentCulture.DateTimeFormat.GetMonthName(i)</option>
-                                }
-                            </select>
+                            <input class="form-select" type="month" name="date">
+                            <input type="submit">
                         </div>
                     </form>
                 </div>
@@ -84,11 +78,16 @@
                         </div>
                         <div>
 
-                            <select id="yearSelect" name="year" onchange="submitYearForm()">
+                            <select class="form-select" id="yearSelect" name="year" onchange="submitYearForm()">
                                 <option>select year</option>
-                                @for (int i = DateTime.Now.Year; i >= 1900; i--)
+                                @for (int i = DateTime.Now.Year; i >= 2012; i--)
                                 {
-                                    <option value="@i">@i</option>
+                                    if(i == DateTime.Now.Year)
+                                    {
+                                        <option value="@i" style="display:none;" selected>@i</option>
+                                    }
+
+                                        <option value="@i">@i</option>                                 
                                 }
                             </select>
                         </div>
@@ -96,6 +95,11 @@
                     </form>
                 </div>
             </div>
+
+
+
+
+            
             @if (TempData["SuccessMessage"] != null)
             {
                 <script>
