--- a/Views/Shared/_AdminNavbar.cshtml
+++ b/Views/Shared/_AdminNavbar.cshtml
@@ -85,6 +85,14 @@
 						</div>
 					</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link " href="/SeatManager/SeatList">
+						<div class="d-flex align-items-center">
+							<span class="nav-link-icon iconAdminNavbar"><i class="fa-solid fa-seat-airline"></i></span>
+							<span class="nav-link-text iconAdminNavbar">Seat</span>
+						</div>
+					</a>
+				</li>
 			</ul>
 		</div>
 	</div>
