--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -84,6 +84,9 @@
                                     </a>
                                 </li>
                             </ul>
+                            <ul class="navbar-nav mb-2 mb-lg-0 d-flex flex-row">
+                                <partial name="_LoginPartial"></partial>
+                            </ul>
                         }
                         else
                         {
@@ -105,9 +108,7 @@
                                         Trains
                                     </a>
                                 </li>
-                            </ul>
-                        }
-                        
+                            </ul>                                           
                         <ul class="navbar-nav mb-2 mb-lg-0 d-flex flex-row">
                             <li class="nav-item">
                                 <a class="nav-link header-nav-link" data="5" href="">
@@ -147,6 +148,7 @@
                                 </a>
                             </li>
                         </ul>
+                        }
                     </div>
                 </div>
             </div>
