--- a/Views/Route/RouteList.cshtml
+++ b/Views/Route/RouteList.cshtml
@@ -451,14 +451,54 @@
 							</div>
 						</div>
 						<div class="border-top d-md-flex justify-content-between align-items-center px-6 py-6">
-							<span>Showing 1 to 8 of 12 entries</span>
+							<span> @Model.Count() Items</span>
 							<nav class="mt-2 mt-md-0">
 								<ul class="pagination mb-0">
-									<li class="page-item disabled"><a class="page-link" href="#!">Previous</a></li>
-									<li class="page-item"><a class="page-link active" href="#!">1</a></li>
-									<li class="page-item"><a class="page-link" href="#!">2</a></li>
-									<li class="page-item"><a class="page-link" href="#!">3</a></li>
-									<li class="page-item"><a class="page-link" href="#!">Next</a></li>
+									@{
+										var routes = ViewBag.Routes as IEnumerable<Railway_Group01.Data.Route>;
+										var page = ViewBag.Page;
+										var pageSize = ViewBag.PageSize;
+										var totalItemCount = ViewBag.TotalItemCount;
+
+										var pageCount = (int)Math.Ceiling(totalItemCount / (double)pageSize);
+										var visiblePages = 6;
+										var halfVisiblePages = visiblePages / 2;
+
+										var startPage = Math.Max(1, page - halfVisiblePages);
+										var endPage = Math.Min(startPage + visiblePages - 1, pageCount);
+
+										var hasPreviousPage = page > 1;
+										var hasNextPage = page < pageCount;
+									}
+
+									<nav aria-label="Page navigation">
+										<ul class="pagination">
+											@if (hasPreviousPage)
+											{
+												<li class="page-item">
+													<a class="page-link" href="@Url.Action("RouteList", new { page = page - 1, pageSize = pageSize })" aria-label="Previous">
+														<span aria-hidden="true">&laquo;</span>
+													</a>
+												</li>
+											}
+
+											@for (int i = startPage; i <= endPage; i++)
+											{
+												<li class="page-item @(i == page ? "active" : "")">
+													<a class="page-link" href="@Url.Action("RouteList", new { page = i, pageSize = pageSize })">@i</a>
+												</li>
+											}
+
+											@if (hasNextPage)
+											{
+												<li class="page-item">
+													<a class="page-link" href="@Url.Action("RouteList", new { page = page + 1, pageSize = pageSize })" aria-label="Next">
+														<span aria-hidden="true">&raquo;</span>
+													</a>
+												</li>
+											}
+										</ul>
+									</nav>
 								</ul>
 							</nav>
 						</div>
