--- a/Views/ScheduleMaster/CreateTrainSchedule.cshtml
+++ b/Views/ScheduleMaster/CreateTrainSchedule.cshtml
@@ -327,13 +327,9 @@
 									<div class="mb-3 col-lg-12">
 										<label class="form-label" id="productSKU">Status</label>
 										<br />
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True" checked />
-											<label class="form-check-label" for="inlineRadio1">Finished</label>
-										</div>
 										<!-- input -->
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" />
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" checked />
 											<label class="form-check-label" for="inlineRadio2">Unfinished</label>
 										</div>
 										<!-- input -->
