--- a/Views/ScheduleMaster/DetailDate.cshtml
+++ b/Views/ScheduleMaster/DetailDate.cshtml
@@ -299,61 +299,100 @@
                                     <tbody>
                                         @foreach (var Departure in Model)
                                         {
-                                            <tr>
-                                                <td>
-                                                    @Departure.Id
-                                                </td>
-                                                <td>@Departure.Train.Code</td>
-                                                <td>@Departure.Route.Id</td>
-                                                <td>@Departure.Departure</td>
-                                                <td>@Departure.Arrival</td>
-                                                <td>
-                                                    <span class="badge bg-light-primary text-dark-primary">@Departure.IsFinished</span>
-                                                </td>
-                                                <td>
-                                                    <a href="/Schedule/TrainScheduleDetail" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
-                                                        <i class="fa-solid fa-circle-info"></i>
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <div class="dropdown">
-                                                        <a href="#" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <i class="bi bi-three-dots-vertical"></i>
-                                                        </a>
-                                                        <ul class="dropdown-menu">
-                                                            <form asp-action="DeleteTrainSchedule" asp-route-id="@Departure.Id" onsubmit="return confirmDelete()">
-                                                                <button class="dropdown-item" type="submit">
-                                                                    <i class="bi bi-trash me-3"></i>
-                                                                    Delete
-                                                                </button>
-                                                            </form>
-                                                            <li>
-                                                                <a class="dropdown-item" href="@Url.Action("EditTrainSchedule", new {id = Departure.Id})">
-                                                                    <i class="bi bi-pencil-square me-3"></i>
-                                                                    Edit
+                                            @if(Departure.IsFinished == false)
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        @Departure.Id
+                                                    </td>
+                                                    <td>@Departure.Train.Code</td>
+                                                    <td>@Departure.Route.Id</td>
+                                                    <td>@Departure.Departure</td>
+                                                    <td>@Departure.Arrival</td>
+                                                    <td>
+                                                        @if (Departure.IsFinished == true)
+                                                        {
+                                                            <span class="badge bg-light-primary text-dark-primary">Finished</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <div class="dropdown">
+                                                                <a href="#" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
+                                                                    <button class="badge bg-light-danger text-dark-danger">Unfinished</button>
                                                                 </a>
-                                                            </li>
-                                                        </ul>
-                                                    </div>
-                                                </td>
-                                            </tr>
+                                                                <ul class="dropdown-menu">
+                                                                    <form asp-action="EditStatusSchedule" asp-route-id="@Departure.Id" method="post" onsubmit="return confirmEditStatus()">
+                                                                        <input type="hidden" name="isfinished" value="True" />
+                                                                        <button class="dropdown-item" type="submit" >
+                                                                            <span style="width:80px;height:24px;font-size:12px;" class="badge bg-light-primary text-dark-primary">Finished</span>
+                                                                        </button>
+                                                                    </form>
+                                                                </ul>
+                                                            </div>
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        <a href="/Schedule/TrainScheduleDetail" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </a>
+                                                    </td>
+                                                    <td>
+                                                        <div class="dropdown">
+                                                            <a href="#" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
+                                                                <i class="bi bi-three-dots-vertical"></i>
+                                                            </a>
+                                                            <ul class="dropdown-menu">
+                                                                <form asp-action="DeleteTrainSchedule" asp-route-id="@Departure.Id" onsubmit="return confirmDelete()">
+                                                                    <button class="dropdown-item" type="submit">
+                                                                        <i class="bi bi-trash me-3"></i>
+                                                                        Delete
+                                                                    </button>
+                                                                </form>
+                                                                <li>
+                                                                    <a class="dropdown-item" href="@Url.Action("EditTrainSchedule", new {id = Departure.Id})">
+                                                                        <i class="bi bi-pencil-square me-3"></i>
+                                                                        Edit
+                                                                    </a>
+                                                                </li>
+                                                            </ul>
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                            }
+                                            else
+                                            {
+                                                <tr>
+                                                    <td>
+                                                        @Departure.Id
+                                                    </td>
+                                                    <td>@Departure.Train.Code</td>
+                                                    <td>@Departure.Route.Id</td>
+                                                    <td>@Departure.Departure</td>
+                                                    <td>@Departure.Arrival</td>
+                                                    <td>
+                                                        @if (Departure.IsFinished == true)
+                                                        {
+                                                            <span class="badge bg-light-primary text-dark-primary">Finished</span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <span class="badge bg-light-danger text-dark-danger">Unfinished</span>
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        <a href="/Schedule/TrainScheduleDetail" class="text-reset" data-bs-toggle="dropdown" aria-expanded="false">
+                                                            <i class="fa-solid fa-circle-info"></i>
+                                                        </a>
+                                                    </td>
+
+                                                </tr>
+                                            }
                                         }
                                     </tbody>
                                 </table>
                             </div>
                         </div>
-                        <div class="border-top d-md-flex justify-content-between align-items-center px-6 py-6">
-                            <span>Showing 1 to 8 of 12 entries</span>
-                            <nav class="mt-2 mt-md-0">
-                                <ul class="pagination mb-0">
-                                    <li class="page-item disabled"><a class="page-link" href="#!">Previous</a></li>
-                                    <li class="page-item"><a class="page-link active" href="#!">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#!">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#!">3</a></li>
-                                    <li class="page-item"><a class="page-link" href="#!">Next</a></li>
-                                </ul>
-                            </nav>
-                        </div>
+                    @*  pation  *@
                     </div>
                 </div>
             </div>
@@ -363,6 +402,10 @@
 <script>
     function confirmDelete() {
         var result = confirm("Do you want to delete?");
+        return result;
+    }
+    function confirmEditStatus() {
+        var result = confirm("Are you sure the schedule is finished?");
         return result;
     }
 </script>
