--- a/Views/ScheduleMaster/EditTrainSchedule.cshtml
+++ b/Views/ScheduleMaster/EditTrainSchedule.cshtml
@@ -308,17 +308,17 @@
 									<div></div>
 									<!-- input -->
 									<!-- input -->
-									<div class="mb-3 col-lg-12">
+									<div class="mb-3 col-lg-12" style="display:none;">
 										<label class="form-label" id="productSKU">Status</label>
 										<br />
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True" checked />
-											<label class="form-check-label" for="inlineRadio1">Active</label>
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True"  />
+											<label class="form-check-label" for="inlineRadio1">Finished</label>
 										</div>
 										<!-- input -->
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" />
-											<label class="form-check-label" for="inlineRadio2">Disabled</label>
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" checked />
+											<label class="form-check-label" for="inlineRadio2">Unfinished</label>
 										</div>
 										<!-- input -->
 									</div>
