--- a/Views/Shared/_AdminHeader.cshtml
+++ b/Views/Shared/_AdminHeader.cshtml
@@ -163,6 +163,11 @@
 								</div>
 							</div>
 						</li>
+						<li class="nav-item">
+							<form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Railway", new { area = "" })">
+								<button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+							</form>
+						</li>
 					</ul>
 				</div>
 			</div>
