--- a/Views/Railway/Index.cshtml
+++ b/Views/Railway/Index.cshtml
@@ -47,7 +47,7 @@
                         </div>
                         <div class="col-md-3 mx-auto">
                             <label for="ngayXP" class="form-label">Date</label>
-                            <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" min="@nowString" max="@tenMoreDaysString" required />
+                            <input type="date" class="form-control" id="ngayXP" asp-for="@Model.StartDate" required />
                         </div>
                         <div class="col-12 mt-2">
                             <button type="submit" class="text-uppercase btn btn-orange">
