--- a/Views/Railway/TrainDetail.cshtml
+++ b/Views/Railway/TrainDetail.cshtml
@@ -35,10 +35,7 @@
                     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item">
-                                <a class="text-decoration-none text-orange" href="/trains">Trains</a>
-                            </li>
-                            <li class="breadcrumb-item">
-                                <a class="text-decoration-none text-orange" href="/trains/trains-list">Trains List</a>
+                                <a class="text-decoration-none text-orange" asp-action="Index">Trains</a>
                             </li>
                             <li class="breadcrumb-item active" aria-current="page">@Html.DisplayFor(x=>Model.Item2.Code)</li>
                         </ol>
@@ -52,8 +49,8 @@
                                 <div class="lh-2 row w-75">
                                     <div class="col-3 align-top pt-2 mx-auto me-0" style="width: 130px;">
                                         <div class="h6 ">@Html.DisplayFor(x=>x.Item3.Code)</div>
-                                        <div class="fw-500" style="font-size:15px">@Model.Item1.Departure.ToString("HH:mm")</div>
-                                        <div class="fw-500" style="font-size:15px">@Model.Item1.Departure.ToString("ddd, dd MMM")</div>
+                                        <div class="fw-500" style="font-size:15px">@ViewBag.Start.ToString("HH:mm")</div>
+                                        <div class="fw-500" style="font-size:15px">@ViewBag.Start.ToString("ddd, dd MMM")</div>
                                         <div class="text-orange fw-600 text-decoration-none">@Html.DisplayFor(x=>x.Item3.Name)</div>
                                     </div>
                                     <div class="col-4 d-flex flex-column justify-content-center align-items-center" style="width: 200px;padding: 0 10px 10px;">
@@ -71,8 +68,8 @@
                                     </div>
                                     <div class="col-3 align-top pt-2 mx-auto ms-0"style="width: 130px;">
                                         <div class="h6 ">@Html.DisplayFor(x=>x.Item4.Code)</div>
-                                        <div class="fw-500" style="font-size:15px">@Model.Item1.Arrival.ToString("HH:mm")</div>
-                                        <div class="fw-500" style="font-size:15px">@Model.Item1.Arrival.ToString("ddd, dd MMM")</div>
+                                        <div class="fw-500" style="font-size:15px">@ViewBag.Start.ToString("HH:mm")</div>
+                                        <div class="fw-500" style="font-size:15px">@ViewBag.End.ToString("ddd, dd MMM")</div>
                                     <div class="text-orange fw-600 text-decoration-none">@Html.DisplayFor(x=>x.Item4.Name)</div>
                                     </div>
                                 </div>
